--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1755,3 +1755,76 @@
 .registRiderWrapper .contentBlock .override-input{
 width:240px!important;
 }
+
+/*기사 등록*/
+.registStaff-Dialog{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 530px;
+  border-radius: 30px;
+  z-index: 2;
+}
+
+.registStaff-content{
+  background-color: white;
+  padding:30px;
+  text-align: left;
+  color: #777;
+}
+
+.registStaff-title{
+  letter-spacing: -1px;
+  font-weight: bold;
+  color: #333;
+  text-align: right;             
+  display: inline-block;
+  font-size: 25px;
+  line-height: 30px;
+}
+
+.registStaff-close{
+    width:30px;
+    cursor:pointer;
+    background-color:#fddc00;
+    /* display: inline-block; */
+    float: right;
+    padding:8px;
+
+}
+
+
+.registStaffWrapper .mainTitle{
+  width:130px;
+}
+
+.registStaffWrapper .registRiderCheck{
+  display: inline-block;
+  margin-left:22px;
+}
+
+.registStaff-Dialog .layout{
+  height:520px;
+}
+
+.registStaffWrapper .submitBlock{
+  margin-top: 30px;
+  text-align: center;
+}
+
+.registStaffWrapper .clearBtn{
+  margin-left: 20px;
+}
+
+.registStaffWrapper .contentBlock .override-select.branch{
+  width:240px;
+}
+
+.registStaffWrapper .override-select.sub{
+  width:270px!important;
+}
+
+.registStaffWrapper .contentBlock .override-input{
+  width:240px;
+}
