시간지연 시계 디자인 수정완료/ 기사관리 간격 수정완료

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1014,6 +1014,15 @@
   width: 20px;
 
 }
+
+.timeDelay-box td{
+  width:200px;
+  font-size:16px;
+  text-align:center;
+}
+
+
+
 /* 필터링 dialog */
 .filtering-Dialog{
   position:fixed;
