--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -872,12 +872,12 @@
   top:50%;
   left:50%;
   transform: translate(-50%, -50%);
-  width:780px;
+  width:690px;
   z-index: 2;
 }
 
 .timeDelay-content{
-  padding:30px;
+  padding:20px;
   background-color:white;
 }
 
@@ -902,10 +902,9 @@
 
 .timeDelay-inner { 
     width: 100%; 
-    height: 650px; 
     overflow-y: scroll; 
     border: 1px solid #ccc; 
-    padding: 20px; 
+    /* padding: 20px;  */
     text-align: left;
     margin-top:20px;
     -ms-overflow-style: none; /* IE and Edge */
@@ -922,7 +921,7 @@
   margin:16px 32px;
   text-align:center;
   line-height:130px;
-  margin:30px;
+  margin:20px;
 }
 
 .timeDelay-box > button{
@@ -1029,7 +1028,7 @@
   top:50%;
   left:50%;
   transform: translate(-50%, -50%);
-  width:525px;
+  width:425px;
   z-index: 2;
 }
 
@@ -1060,7 +1059,6 @@
 
 .filtering-inner { 
     width: 100%; 
-    height: 558px; 
     overflow-y: scroll; 
     border: 1px solid #ccc; 
     padding: 20px; 
@@ -1075,9 +1073,7 @@
 }
 
 .filtering-box{
-  width:365px;
-  height:448px;
-  margin:30px;
+  /* width:365px; */
 }
 .filtering-box .ant-checkbox{
   top: 0em!important;
@@ -1095,7 +1091,7 @@
   width:120px;
   height:52px;
   float:left;
-  margin:30px;
+  margin:20px;
 }
 
 .filtering-box .ant-checkbox-inner{
@@ -1155,7 +1151,6 @@
 
 .taskScheduler-inner { 
     width: 100%; 
-    height: 580px; 
     overflow-y: scroll; 
     border: 1px solid #ccc; 
     padding: 20px; 
@@ -1701,7 +1696,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 530px;
+  width: 500px;
   border-radius: 30px;
   z-index: 2;
 }
@@ -1771,7 +1766,7 @@ width:240px!important;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 530px;
+  width: 500px;
   border-radius: 30px;
   z-index: 2;
 }
@@ -1808,7 +1803,7 @@ width:240px!important;
   width:130px;
 }
 
-.registStaffWrapper .registRiderCheck{
+.registStaffWrapper .registStaffCheck{
   display: inline-block;
   margin-left:22px;
 }
@@ -1846,7 +1841,7 @@ width:240px!important;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 530px;
+  width: 500px;
   border-radius: 30px;
   z-index: 2;
 }
@@ -1883,10 +1878,6 @@ width:240px!important;
   width:130px;
 }
 
-.blackRiderWrapper .registRiderCheck{
-  display: inline-block;
-  margin-left:22px;
-}
 
 .blackRider-Dialog .layout{
   height:500px;
