--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -401,11 +401,13 @@
     font-size: 18px;
     margin-top: 12px;
   }
-
   .registCallLayout .mapLayout{
     margin-top: 20px;
     width:1000px;
     height:600px;
+}
+  .registCallLayout #myMap{
+    width:895px;
 }
   
 
@@ -695,6 +697,158 @@
   width:300px;
 }
 
+
+/* 가맹점수정 dialog */
+.modifyFran-Dialog{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 1000px;
+  border-radius: 30px;
+  z-index: 2;
+}
+.modifyFran-container{
+  background-color: white;
+  padding:30px;
+  text-align: left;
+  color: #777;
+}
+.modifyFran-title{
+  /* font-size: 28px; */
+  letter-spacing: -1px;
+  font-weight: bold;
+  color: #333;
+  text-align: right;             
+  display: inline-block;
+  font-size: 25px;
+  line-height: 30px;
+}
+.modifyFran-close{
+  width: 30px;
+  background-color: #fddc00;
+  padding: 8px;
+  cursor: pointer;
+  /* display: inline-block; */
+  float: right;
+}
+.modifyFranLayout{ 
+  margin-top: 20px;
+  width: 100%;
+  /* height: 510px;  */
+  overflow-y: scroll; 
+  border: 1px solid #ccc; 
+  padding: 10px 20px 20px; 
+  text-align: left;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.modifyFranLayout::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+/* 왼쪽 wrappper */
+.modifyFranWrapper{
+  display: inline-block;
+}
+.modifyFranTitle{
+  display: inline-block;
+  font-size: 23px;
+  vertical-align: middle;
+  font-weight: bold;
+  color: #1890ff;
+}
+.modifyFranWrapper .mainTitle{
+  display: inline-block;
+  font-size: 20px;
+  vertical-align: middle;
+  font-weight: bold;
+  width: 100px;
+}
+.modifyFranWrapper .mainTitle.red{
+  display: inline-block;
+  font-size: 20px;
+  vertical-align: middle;
+  font-weight: bold;
+  width: 100px;
+  color: #1890ff;
+}
+.mainTitle.sub{
+  display: inline-block;
+  font-size: 18px;
+  vertical-align: middle;
+  font-weight: bold;
+  margin-left: 10px;
+}
+.modifyFranLayout .contentBlock{
+  margin-top: 15px;
+}
+.modifyFranWrapper .ant-form-item{
+  margin-bottom: 0px;
+}
+.modifyFranWrapper .selectItem{
+  display: inline-block;
+}
+.modifyFranWrapper .override-select{
+  margin-left: 20px;
+  width: 250px;
+  font-size: 15px;
+}
+.modifyFranWrapper .override-select.branch{
+  margin-left: 20px;
+  width: 300px;
+  font-size: 15px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.modifyFranWrapper .override-input{
+  margin-left: 20px;
+  width: 300px;
+}
+/* 오른쪽 wrappper */
+.modifyFranWrapper.sub{
+  vertical-align: top;
+  display: inline-block;
+  /* width: 340px; */
+  margin-top: 36px;
+  margin-left: 70px;
+}
+.modifyFranWrapper.sub .mainTitle{
+  display: inline-block;
+  font-size: 20px;
+  vertical-align: middle;
+  font-weight: bold;
+  width: 75px;
+}
+.modifyFranWrapper.sub .override-input.sub{
+  /* margin-left: -30px; */
+  width: 300px;
+}
+.modifyFranWrapper.sub .override-input.price{
+  /* margin-left: -30px; */
+  width: 200px;
+  margin-right: 10px;
+}
+.modifyFranWrapper.sub .callTab{
+  width: 400px;
+  height: 40px;
+  font-size: 18px;
+  margin-top: 60px;
+}
+/* 하단 랩퍼 */
+.modifyFranWrapper.bot{
+  padding-top: 30px;
+  display: inline-block;
+  float: right;
+  margin-right: 13px;
+}
+.modifyFranWrapper.bot .callTab{
+  width: 185px;
+  height: 40px;
+  font-size: 18px;
+  /* margin-top: 12px; */
+  display: inline-block;
+  vertical-align: middle;
+}
 
 /* 라이더 코인충전 dialog */
 .coinRider-Dialog{
