--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -17,6 +17,145 @@
     z-index: 2;
 }
 
+/* 기사 추가 dialog */
+.addRider-Dialog-overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.addRider-Dialog{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 500px;
+  border-radius: 30px;
+  z-index: 2;
+}
+
+.addRider-content{
+  background-color: white;
+  padding:30px;
+  /* text-align: left; */
+  /* color: #777; */
+}
+
+
+.addRider-title{
+  letter-spacing: -1px;
+  font-weight: bold;
+  color: #333;
+  text-align: right;             
+  display: inline-block;
+  font-size: 25px;
+  line-height: 30px;
+}
+
+.addRider-close{
+    width:30px;
+    cursor:pointer;
+    background-color:#fddc00;
+    /* display: inline-block; */
+    float: right;
+    padding:8px;
+}
+
+.addRider-Dialog .addRiderlayout{
+  height: 540px;
+}
+
+.addRiderWrapper .contentBlock {
+  margin-top: 30px;
+}
+
+.addRiderWrapper .contentBlock .selectItem .override-select{
+  width: 345px;
+}
+
+.addRider-Dialog .dataTableBlock{
+  margin-top: 40px;
+}
+
+.addRiderWrapper .submitBlock{
+  margin-top: 30px;
+  text-align: center;
+}
+
+/* 그룹 추가 dialog */
+.addGroup-Dialog-overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.addGroup-Dialog{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 450px;
+  border-radius: 30px;
+  z-index: 2;
+}
+
+.addGroup-content{
+  background-color: white;
+  padding:30px;
+  /* text-align: left; */
+  /* color: #777; */
+}
+
+
+.addGroup-title{
+  letter-spacing: -1px;
+  font-weight: bold;
+  color: #333;
+  text-align: right;             
+  display: inline-block;
+  font-size: 25px;
+  line-height: 30px;
+}
+
+.addGrouplayout .contentBlock{
+  width: 400px;
+}
+
+.addGrouplayout .contentBlock .override-input{
+  width: 300px;
+}
+
+.addGroup-close{
+    width:30px;
+    cursor:pointer;
+    background-color:#fddc00;
+    /* display: inline-block; */
+    float: right;
+    padding:8px;
+}
+
+.addGroup-Dialog .addGrouplayout{
+  height: 100px;
+}
+
+.addGroupWrapper .contentBlock {
+  margin-top: 30px;
+}
+
+.addGroupWrapper .submitBlock{
+  margin-top: 30px;
+  text-align: center;
+}
+
+
 /* 공지사항 dialog */
 .noticeDialog{
   position: fixed;
@@ -1240,7 +1379,7 @@
   top:50%;
   left:50%;
   transform: translate(-50%, -50%);
-  width:1000px;
+  width:650px;
   z-index: 2;
 }
 
