--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1874,16 +1874,12 @@
   margin-left:20px;
 }
 
-.riderGroup-ftline .ant-checkbox-inner{
-  /* width: 25px;
-  height:25px; */
-  margin-right:20px;
+
+.riderGroup-ftline-02 .riderSubtext, .riderGroup-ftline-03 .riderSubtext, .riderGroup-ftline-04 .riderSubtext {
+  margin-left:20px;
 }
 
-/* .riderGroup-ftline .ant-checkbox-inner::after {
-  width:12px;
-  height:12px;
-} */
+
 
 .riderGroup-ftline .ant-radio-wrapper{
   font-size:16px!important;
