검색조건 css 변경

--- a/src/css/staff.css
+++ b/src/css/staff.css
@@ -1,9 +1,5 @@
 .searchRequirement{
-    margin-top: 20px;
-}
-
-.tableLayout{
-    margin-top: 20px;
+    margin-top: 10px !important;
 }
 
 .searchRequirementText{
