--- a/src/css/order.css
+++ b/src/css/order.css
@@ -6,6 +6,10 @@
     margin-left: 0px !important;
 }
 
+.orderTab{
+    margin-right: 20px !important;
+}
+
 .selectLayout{
     margin-top: 20px !important;
 }
