--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1865,13 +1865,12 @@
   font-size:16px;
   border:1px solid #ccc;
   height:250px;
-  padding-top:20px;
+  padding:20px;
 }
 
 .riderGroup-ftline td{
   width:150px;
   display:inline-block;
-  margin-left:20px;
 }
 
 
@@ -1890,7 +1889,6 @@
 
 .riderGroup-btn{
   display:inline-block;
-  width:292px;
   float:right;
 }
 
@@ -1917,7 +1915,7 @@
   display:inline-block;
   padding: 0px!important;
 }
-.riderGroup-btn-02{
+/* .riderGroup-btn-02{
   vertical-align: middle;
   margin-left:20px;
   display:inline-block;
@@ -1932,7 +1930,7 @@
   font-size:20px;
   padding: 0px!important;
   display:inline-block;
-}
+} */
 
 
 
