--- a/src/css/common.css
+++ b/src/css/common.css
@@ -18,6 +18,6 @@
 }
 
 .ant-input-search-button{
-    background-color: #fddc00 !important;
-    border-color: #fddc00 !important;
+    background-color: #222 !important;
+    border-color: #222 !important;
 }
