--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -334,7 +334,7 @@
   
   .mainTitle{
     display: inline-block;
-    font-size: 20px;
+    font-size: 18px;
     vertical-align: middle;
     font-weight: bold;
     /* width: 75px; */
@@ -365,7 +365,8 @@
     text-align: center;
   }
   .btnInsert{
-    margin-top: 10px;
+    margin: 20px 0px;
+    
   }
   .inputBox{
     display: inline-block;
@@ -457,7 +458,7 @@
   }
   .registCallWrapper .mainTitle{
     display: inline-block;
-    font-size: 20px;
+    /* font-size: 20px; */
     vertical-align: middle;
     font-weight: bold;
     width: 75px;
@@ -517,7 +518,7 @@
   }
   .registCallWrapper.sub .mainTitle{
     display: inline-block;
-    font-size: 20px;
+    /* font-size: 20px; */
     vertical-align: middle;
     font-weight: bold;
     width: 75px;
@@ -611,14 +612,14 @@
 }
 .registFranWrapper .mainTitle{
   display: inline-block;
-  font-size: 20px;
+  /* font-size: 20px; */
   vertical-align: middle;
   font-weight: bold;
   width: 100px;
 }
 .registFranWrapper .mainTitle.red{
   display: inline-block;
-  font-size: 20px;
+  /* font-size: 20px; */
   vertical-align: middle;
   font-weight: bold;
   width: 100px;
@@ -666,7 +667,7 @@
 }
 .registFranWrapper.sub .mainTitle{
   display: inline-block;
-  font-size: 20px;
+  /* font-size: 20px; */
   vertical-align: middle;
   font-weight: bold;
   width: 75px;
@@ -700,7 +701,7 @@
   color: #1890ff;
 }
 .registFranWrapper.bot .mainTitle{
-  font-size: 20px;
+  /* font-size: 20px; */
   vertical-align: middle;
   font-weight: bold;
   width: 90px;
@@ -898,7 +899,7 @@
 }
 .modifyFranWrapper .mainTitle{
   display: inline-block;
-  font-size: 20px;
+  /* font-size: 20px; */
   vertical-align: middle;
   font-weight: bold;
   width: 100px;
@@ -1257,7 +1258,7 @@
   width:80px;
   color:#000;
   text-align:left;
-  font-size:20px;
+  font-size:18px;
   display:inline-block;
   vertical-align: middle;
   margin-left:15px;
@@ -1287,10 +1288,9 @@
 .timeDelay-btn-02 > button{
   height:50px;
   width:200px;
-  font-size:20px;
+  font-size:18px;
   background:#40a9ff; 
   color:#fff;
-  font-size:20px;
   text-align:center;
   padding: 0px!important;
   display:inline-block;
@@ -1467,7 +1467,7 @@
 
 .mainTitle{
   display: inline-block;
-  font-size: 20px;
+  /* font-size: 20px; */
   vertical-align: middle;
   font-weight: bold;
   /* width: 75px; */
@@ -2186,6 +2186,12 @@ width:240px!important;
   margin-left: 20px;
 }
 
+
+.blackRiderWrapper .submitBlock button{
+  height:40px;
+  width:130px;
+  font-size:20px;
+}
 .blackRiderWrapper .contentBlock .override-select.branch{
   width:240px!important;
 }
