--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -203,62 +203,7 @@
   height: 380px;
 }
 
-/* 직원 등록 dialog */
-.registStaff-Dialog{
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 530px;
-  border-radius: 30px;
-  z-index: 2;
-}
 
-.container{
-  background-color: white;
-  padding:30px;
-  text-align: left;
-  color: #777;
-}
-
-.title{
-  /* font-size: 28px; */
-  letter-spacing: -1px;
-  font-weight: bold;
-  color: #333;
-  text-align: right;             
-  display: inline-block;
-  font-size: 25px;
-  line-height: 30px;
-}
-
-.layout{ 
-  margin-top: 20px;
-  width: 100%;
-  height: 510px; 
-  overflow-y: scroll; 
-  border: 1px solid #ccc; 
-  padding: 10px 20px 20px; 
-  text-align: left;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-.layout::-webkit-scrollbar {
-  display: none; /* Chrome, Safari, Opera*/
-}
-
-.layout .contentBlock{
-  margin-top: 25px;
-}
-
-.submitBlock{
-  margin-top: 30px;
-  text-align: center;
-}
-
-.clearBtn{
-  margin-left: 20px;
-}
 
 
   /* 할증 dialog */
@@ -394,12 +339,12 @@
     color: #000;
   }
   .btnInsert .ant-btn{
-    width: 200px;
+    width: 130px;
     font-size: 18px;
     border-radius: 2px;
     vertical-align: middle;
     padding: 0px;
-    height: 43px;
+    height: 40px;
     float: right;
   }
 
@@ -605,7 +550,7 @@
 }
 .registFranTitle{
   display: inline-block;
-  font-size: 23px;
+  font-size: 20px;
   vertical-align: middle;
   font-weight: bold;
   color: #1890ff;
@@ -695,7 +640,7 @@
   display: inline-block;
 }
 .registFranWrapper.bot .registFranTitle{
-  font-size: 23px;
+  font-size: 20px;
   vertical-align: middle;
   font-weight: bold;
   color: #1890ff;
@@ -707,7 +652,7 @@
   width: 90px;
 }
 .registFranWrapper.bot .subTitle{
-  font-size: 20px;
+  font-size: 18px;
   vertical-align: middle;
   font-weight: bold;
   /* width: 70px; */
@@ -824,7 +769,7 @@
 .coinTran-btn-01 > button{
   height:40px;
   width:200px;
-  font-size:20px;
+  font-size:18px;
   background-color:#1890ff;
   color:#fff;
   font-size:20px;
@@ -1001,7 +946,7 @@
 }
 
 .coinRider-content{
-  padding:30px;
+  padding:20px;
   background-color:white;
 }
 
@@ -1072,7 +1017,7 @@
 .coinRider-btn-01 > button{
   height:40px;
   width:200px;
-  font-size:20px;
+  font-size:18px;
   background-color:#1890ff;
   color:#fff;
   font-size:20px;
@@ -1249,6 +1194,8 @@
 .timeDelay-btn{
   display:inline-block;
   vertical-align: middle; 
+  height: 40px;
+  line-height:32px;
 }
 /* .timeDelay-btn .ant-checkbox-input{
   display:inline-block;
@@ -1260,7 +1207,6 @@
   text-align:left;
   font-size:18px;
   display:inline-block;
-  vertical-align: middle;
   margin-left:15px;
 }
 
@@ -1269,12 +1215,17 @@
   height:22px;
   display:inline-block;
   vertical-align: middle;
-  margin:8px;
+  margin-top:-10px;
+  
 }
 
 .timeDelay-btn .ant-checkbox-inner::after {
   width:10px;
   height:10px;
+}
+
+.timeDelay-btn .ant-checkbox-input {
+  height:32px;
 }
 
 
@@ -1283,11 +1234,11 @@
   display:inline-block;
   vertical-align: middle;
   margin-left:55px;
+  float:right;
 } 
 
 .timeDelay-btn-02 > button{
-  height:50px;
-  width:200px;
+  width:130px;
   font-size:18px;
   background:#40a9ff; 
   color:#fff;
@@ -1493,9 +1444,8 @@
 .taskScheduler-btn-01 > button{
   height:40px;
   width:130px;
-  font-size:20px;
+  font-size:18px;
   color:#222;
-  font-size:20px;
   text-align:center;
   display:inline-block;
   padding: 0px!important;
@@ -1508,9 +1458,8 @@
 .taskScheduler-btn-02 > button{
   height:40px;
   width:130px;
-  font-size:20px;
+  font-size:18px;
   color:#222;
-  font-size:20px;
   padding: 0px!important;
   display:inline-block;
 }
@@ -1523,10 +1472,9 @@
 .taskScheduler-btn-03 > button{
   height:40px;
   width:130px;
-  font-size:20px;
+  font-size:18px;
   background:#1890ff;
   color:#fff;
-  font-size:20px;
   padding: 0px!important;
   display:inline-block;
 }
@@ -1567,7 +1515,6 @@
 
 .taskGroup-inner { 
     width: 100%; 
-    height: 580px; 
     overflow-y: scroll; 
     border: 1px solid #ccc; 
     padding: 20px; 
@@ -1602,9 +1549,8 @@
 .taskGroup-btn-01 > button{
   height:40px;
   width:130px;
-  font-size:20px;
+  font-size:18px;
   color:#222;
-  font-size:20px;
   text-align:center;
   display:inline-block;
   padding: 0px!important;
@@ -1657,7 +1603,7 @@
 }
 
 .taskWork-content{
-  padding:30px;
+  padding:20px;
   background-color:white;
 }
 
@@ -1712,7 +1658,7 @@
 }
 .taskWork-list td{
   width:100px;
-  font-size:16px;
+  font-size:18px;
   display:inline-block;
   /* border:1px solid blue; */
   
@@ -1743,11 +1689,10 @@
 }
 .taskWork-btn-01 > button{
   height:40px;
-  width:200px;
-  font-size:20px;
+  width:130px;
+  font-size:18px;
   background-color:#1890ff;
   color:#fff;
-  font-size:20px;
   text-align:center;
   display:inline-block;
   padding: 0px!important;
@@ -1862,7 +1807,7 @@
 .riderGroup-ftline{
   border:1px solid;
   line-height:30px;
-  font-size:16px;
+  font-size:18px;
   border:1px solid #ccc;
   height:250px;
   padding:20px;
@@ -1902,17 +1847,16 @@
 
 .riderGroup-btn-01 .tabBtn{
   margin:0px!important;
+  display:inline-block;
 
 }
 .riderGroup-btn-01 > button{
   height:40px;
   width:130px;
-  font-size:20px;
   background:#1890ff;
   color:#fff;
-  font-size:20px;
+  font-size:18px;
   text-align:center;
-  display:inline-block;
   padding: 0px!important;
 }
 /* .riderGroup-btn-02{
@@ -1944,12 +1888,6 @@
     margin-left:20px;
     }
 
-.riderGroup-ftline .inputBox{
-  display: inline-block;
-  font-size: 16px;
-  vertical-align: middle;
-}
-
 .riderGroup-ftline .inputBox .ant-form-item{
   margin-bottom: 0px;
   display: inline-block;
@@ -1959,7 +1897,6 @@
   display: inline-block;
   vertical-align: middle;
   margin-left: 10px;
-  font-size: 14px;
   color: #000!important;
 }
 .riderGroup-ftline .ant-input{
@@ -1968,7 +1905,6 @@
 
 .riderGroup-ftline .inputBox{
   display: inline-block;
-  font-size: 16px;
   vertical-align: middle;
   margin-left:0px!important;
 }
@@ -1983,7 +1919,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 500px;
+  width: 530px;
   border-radius: 30px;
   z-index: 2;
 }
@@ -1993,6 +1929,24 @@
   padding:30px;
   text-align: left;
   color: #777;
+}
+
+.registRider-Dialog .layout{ 
+  margin-top: 20px;
+  width: 100%;
+  overflow-y: scroll; 
+  border: 1px solid #ccc; 
+  padding: 20px 20px; 
+  text-align: left;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.registRider-Dialog .layout::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+
+.registRdierWrapper .contentBlock{
+  margin-top: 25px;
 }
 
 .registRider-title{
@@ -2015,6 +1969,9 @@
 
 }
 
+.registRiderWrapper .contentBlock{
+  margin-top:25px;
+}
 
 .registRiderWrapper .mainTitle{
   width:130px;
@@ -2025,9 +1982,9 @@
   margin-left:22px;
 }
 
-.registRider-Dialog .layout{
+/* .registRider-Dialog .layout{
   height:700px;
-}
+} */
 
 .registRiderWrapper .submitBlock{
   margin-top: 30px;
@@ -2047,13 +2004,19 @@
 width:240px!important;
 }
 
+.registRider-Dialog .ant-btn{
+  width:130px;
+  height:40px;
+  font-size:18px!important;
+}
+
 /*직원 등록*/
 .registStaff-Dialog{
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 500px;
+  width: 530px;
   border-radius: 30px;
   z-index: 2;
 }
@@ -2096,8 +2059,25 @@ width:240px!important;
 }
 
 .registStaff-Dialog .layout{
-  height:520px;
+  margin-top: 20px;
+  width: 100%;
+  overflow-y: scroll; 
+  border: 1px solid #ccc; 
+  padding: 20px 20px; 
+  text-align: left;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
 }
+
+.registStaff-Dialog .layout::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+
+.registStaff-Dialog .layout .contentBlock{
+  margin-top: 25px;
+}
+
 
 .registStaffWrapper .submitBlock{
   margin-top: 30px;
@@ -2125,6 +2105,11 @@ width:240px!important;
 .registStaffWrapper span.ant-radio + *{
   padding-left: 5px;
   padding-right: 5px;
+}
+.registStaff-Dialog .ant-btn{
+  width:130px;
+  height:40px!important;
+  font-size:18px!important;
 }
 
 
@@ -2167,15 +2152,31 @@ width:240px!important;
 
 }
 
+.blackRider-Dialog .layout{
+  margin-top: 20px;
+  width: 100%;
+  overflow-y: scroll; 
+  border: 1px solid #ccc; 
+  padding: 20px 20px; 
+  text-align: left;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+}
+
+.blackRider-Dialog .layout::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+
 
 .blackRiderWrapper .mainTitle{
   width:130px;
 }
 
-
-.blackRider-Dialog .layout{
-  height:500px;
+.blackRiderWrapper .contentBlock{
+  margin-top:25px;
 }
+
 
 .blackRiderWrapper .submitBlock{
   margin-top: 30px;
@@ -2190,7 +2191,7 @@ width:240px!important;
 .blackRiderWrapper .submitBlock button{
   height:40px;
   width:130px;
-  font-size:20px;
+  font-size:18px;
 }
 .blackRiderWrapper .contentBlock .override-select.branch{
   width:240px!important;
