--- a/src/css/staff.css
+++ b/src/css/staff.css
@@ -8,7 +8,7 @@
 }
 
 .registStaff{
-    float: right;
+    /* float: right; */
     background-color: #fddc00;
     font-family: NotoSansRegular;
     border: #fddc00;
