--- a/src/css/order.css
+++ b/src/css/order.css
@@ -50,7 +50,6 @@
  margin-left: 20px!important;
  vertical-align: top;
 }
-
   .tabCheck .ant-checkbox-inner{
     width:30px;
     height:30px;
@@ -59,11 +58,13 @@
     width: 15px;
     height: 15px;
   }
-  
-  .tabCheck .ant-checkbox + span{
-    font-size:16px;
-  }
 
-  .tabCheck >span{
+  .tabCheck .ant-checkbox + span{
+    font-size:16px; 
+ }
+/* 
+  .tabCheck span .span1{
+      margin-top: -10px!important;
+      width:60px;
       height:32px;
-  }
+  }  */
