--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1088,6 +1088,23 @@
   vertical-align: middle;
 }
 
+/* 출금 비밀번호 초기화 */
+.updatePassword-inner { 
+  width: 100%; 
+  height: 80px; 
+  overflow-y: scroll; 
+  border: 1px solid #ccc; 
+  padding: 20px; 
+  text-align: left;
+  margin-top:5px;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.updatePassword-inner::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+
 /* 라이더 코인충전 dialog */
 .coinRider-Dialog{
   position:fixed;
