--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -149,7 +149,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 500px;
+  width: 650px;
   border-radius: 30px;
   z-index: 2;
 }
@@ -186,7 +186,7 @@
 }
 
 .addRiderWrapper .contentBlock {
-  margin-top: 30px;
+  margin-top: 30px !important;
 }
 
 .addRiderWrapper .contentBlock .selectItem .override-select{
@@ -760,7 +760,7 @@
   vertical-align: top;
   display: inline-block;
   /* width: 340px; */
-  margin-top: 36px;
+  margin-top: 46px;
   margin-left: 70px;
 }
 .registFranWrapper.sub .mainTitle{
@@ -802,7 +802,7 @@
   /* font-size: 20px; */
   vertical-align: middle;
   font-weight: bold;
-  width: 90px;
+  width: 75px;
 }
 .registFranWrapper.bot .subTitle{
   font-size: 18px;
