--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1910,7 +1910,7 @@
 
 .riderGroup-inner { 
     width: 100%; 
-    height: 675px; 
+    height: 610px; 
     overflow-y: scroll; 
     border: 1px solid #ccc; 
     padding: 20px; 
@@ -1924,30 +1924,6 @@
   display: none; /* Chrome, Safari, Opera*/
 }
 
-.riderGroup-place1{
-  text-align: center;
-  display:inline-block;
-  margin:0px 30px;
-}
-.riderGroup-place1 .ant-select:not(.ant-select-customize-input) .ant-select-selector{
-  width:220px;
-  /* margin: 0px 30px; */
-}
-
-.riderGroup-content .selectBlock{
-  margin-top:20px; 
-}
-.riderGroup-inner .selectBlock .ant-form-item{
-  margin-bottom: 0px;
-}
-.riderGroup-inner .selectBlock .selectItem{
-  display: inline-block;
-}
-/* .selectBlock .antd-select{
-  margin-left: 20px;
-  width: 250px;
-  font-size: 15px;
-} */
 
 .riderGroup-inner .listBlock{
   margin-top: 20px;
@@ -1965,12 +1941,12 @@
 }
 
 .riderGroup-ftline{
-  border:1px solid;
   line-height:30px;
   font-size:18px;
-  border:1px solid #ccc;
-  height:250px;
+  height:215px;
   padding:20px;
+  margin-top:10px;
+  /* border:1px solid #ccc; */
 }
 
 .riderGroup-ftline td{
@@ -2019,35 +1995,18 @@
   text-align:center;
   padding: 0px!important;
 }
-/* .riderGroup-btn-02{
-  vertical-align: middle;
-  margin-left:20px;
-  display:inline-block;
-} 
-
-.riderGroup-btn-02 > button{
-  height:40px;
-  width:130px;
-  font-size:20px;
-  background:#222;
-  color:#fff;
-  font-size:20px;
-  padding: 0px!important;
-  display:inline-block;
-} */
 
 
-
-/*기사그룹관리 임시 input*/
-
-.riderGroup-ftline-01, .riderGroup-ftline-03, .riderGroup-ftline-04 {
+.riderGroup-ftline-01, .riderGroup-ftline-05 {
   display:inline-block;
   }
 
-.riderGroup-ftline-03 .ant-input, .riderGroup-ftline-04 .ant-input {
+ .riderGroup-ftline-05 .ant-input {
     margin-left:20px;
     }
-
+.riderGroup-ftline-05 td{
+  margin-left:35.15px;
+}
 .riderGroup-ftline .inputBox .ant-form-item{
   margin-bottom: 0px;
   display: inline-block;
@@ -2073,6 +2032,17 @@
   margin-left: -10px;
 }
 
+.riderGroup-inner .listBlock .ant-pagination{
+display:none;
+}
+
+.riderGroup-inner .ant-table-row-level-0-active{
+background-color: #1a1a1a;
+}
+
+.ant-checkbox-checked:checked .ant-table-row-level-0:active{
+  background-color: #fddc00;
+}
 /*기사 등록*/
 .registRider-Dialog{
   position: fixed;
