--- a/src/css/order.css
+++ b/src/css/order.css
@@ -66,4 +66,19 @@
     margin-left:10px;
 
   }
+
+.table-red{
+    background-color: red;
+}
+.table-gray{
+    background-color: gray;
+}
+.table-blue{
+    background-color: rgb(0, 0, 255, 0.6);;
+    /* color: white; */
+}
+.table-white{
+    background-color: white;
+}
+
   
