지도관제 UI 완성 / 지도관제, 콜등록에 네이버지도 적용

--- a/src/css/order.css
+++ b/src/css/order.css
@@ -41,8 +41,16 @@
 }
 
 .mapLayout{
-    width:100%;
+    width:55%;
     height:600px;
+    float: left;
+}
+
+.map-navermap {
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    width: 100%;
+    height: 600px;
 }
 
 
