--- a/src/css/order.css
+++ b/src/css/order.css
@@ -24,7 +24,12 @@
 }
 
 .riderTableLayout{
-    margin-top: 10px;
+    min-height: 200px;
+    position: absolute;
+    top: 20px;
+    left: 10px;
+    right: 10px;
+    z-index: 80;
 }
 
 .orderTab{
@@ -32,16 +37,16 @@
 }
 
 .textLayout{
-    margin-top: 30px;
+    height: 30px;
 }
 
 .riderText{
-    font-size: 20px;
+    font-size: 18px;
     font-family: NotoSansBold;
 }
 
 .mapLayout{
-    width:55%;
+    width:100%;
     height:600px;
     float: left;
 }
@@ -50,7 +55,7 @@
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     width: 100%;
-    height: 600px;
+    height: 1000px;
 }
 
 
