--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1433,31 +1433,29 @@
 }
 
 .timeDelay-box{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
   width:610px;
   height:300px;
-  margin:16px 32px;
-  text-align:center;
-  line-height:130px;
-  margin:20px;
+  margin:1rem;
 }
 
 .timeDelay-box > button{
   width:144px;
   height:144px;
-  float:left;
   border:1px solid #777;
   border-radius:10px;
-  margin:0px 0px 10px 10px;
   font-size:25px;
 }
 
-.timeDelay-box .timeDelay-box-01, .timeDelay-box-05, .timeDelay-box-09 {
+/* .timeDelay-box .timeDelay-box-01, .timeDelay-box-05, .timeDelay-box-09 {
   margin-left:0px!important;
 }
 
 .timeDelay-box .timeDelay-box-10, .timeDelay-box-11, .timeDelay-box-12 {
   margin-bottom:0px!important;
-}
+} */
 
 .timeDelay-place1{
   text-align: center;
@@ -1513,6 +1511,7 @@
   vertical-align: middle;
   margin-left:55px;
   float:right;
+  background-color: grey;
 } 
 
 .timeDelay-btn-02 > button{
