지도관제 기사검색 오류 분기 및 css 변경

--- a/src/css/order.css
+++ b/src/css/order.css
@@ -62,6 +62,12 @@
     height: 1000px;
 }
 
+.riderName{
+    cursor: pointer;
+    color: blue;
+    text-decoration: underline;
+}
+
 
 .reception-box .ant-checkbox-inner{
     width:25px;
